<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewCommon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/setting_version_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_light_gray"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:paddingRight="15dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setting_version_status"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_black"
                    android:textSize="18dp"
                    tools:text="当前版本" />

                <TextView
                    android:id="@+id/setting_expire"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/setting_upgrade"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:background="@drawable/btn_green_border"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/upgrade"
                    android:textColor="@color/text_white"
                    android:textSize="14dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/setting_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_gray"
                android:textSize="12dp"
                tools:text="本月放大2" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/setting_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            android:textSize="17dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/setting_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/password"
            android:inputType="text"
            android:lines="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black"
            android:textSize="17dp" />

        <CheckBox
            android:id="@+id/setting_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/reg_new"
            android:textColor="@color/text_black" />


        <Button
            android:id="@+id/setting_login"
            style="@style/GreenLargeButton"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_green"
            android:text="@string/login_reg" />

        <Button
            android:id="@+id/setting_logout"
            style="@style/RedLargeButton"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_red"
            android:text="@string/logout"
            android:textColor="@color/text_white"
            android:textSize="15dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/setting_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="@color/text_black"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/setting_modify_password"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/text_black"
            android:textSize="17dp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/line0_color" />

        <LinearLayout
            android:id="@+id/setting_qr_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/setting_qr"
                android:layout_width="85dp"
                android:layout_height="85dp"
                app:placeholderImage="@drawable/wechat_qr" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/line0_color" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:text="@string/ch_des"
                android:textColor="@color/text_black"
                android:textSize="16dp" />

        </LinearLayout>

        <Button
            android:id="@+id/setting_conf"
            style="@style/GrayLargeButton"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/conf" />

        <Button
            android:id="@+id/setting_share"
            style="@style/GrayLargeButton"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/share" />

        <Button
            android:id="@+id/setting_visit"
            style="@style/GrayLargeButton"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/visit" />

        <Button
            android:id="@+id/setting_feedback"
            style="@style/GrayLargeButton"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/feedback" />

        <TextView
            android:id="@+id/setting_version"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/text_gray"
            android:textSize="16dp" />

    </LinearLayout>
</ScrollView>