<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_version"
        android:gravity="center"
        android:minHeight="70dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/btn_green"
        android:textSize="18dp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="@color/line0_color" />

    <TextView
        android:id="@+id/not_notify"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/menu_item_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/not_notify"
        android:textColor="@color/text_gray"
        android:textSize="17dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line0_color" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/menu_item_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/text_gray"
        android:textSize="17dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line0_color" />

    <TextView
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/dialog_item_bottom_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/text_black"
        android:textSize="17dp" />

</LinearLayout>