<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="20dp"
    android:paddingRight="10dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/new_password"
        android:inputType="text"
        android:lines="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@color/text_black"
        android:textColorHint="@color/text_black"
        android:textSize="17dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_again"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/again"
        android:inputType="text"
        android:lines="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@color/text_black"
        android:textColorHint="@color/text_black"
        android:textSize="17dp" />


    <Button
        android:id="@+id/ok"
        style="@style/GreenLargeButton"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_green"
        android:text="@string/change_password" />


</LinearLayout>