<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_light_gray"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/choose_image"
            style="@style/GreenLargeButton"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_green"
            android:text="@string/fileupload" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/limit"
            android:textColor="@color/text_gray"
            android:textSize="12.5dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/over_limit_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:drawableLeft="@drawable/ic_error_24dp"
        android:drawablePadding="2dp"
        android:gravity="center_vertical"
        android:text="@string/upgrade_err"
        android:textColor="@color/btn_blue_press"
        android:textSize="14.5dp"
        android:visibility="gone" />
</LinearLayout>